wip: reorg packages in world-generator